--- a/polybar/config.ini
+++ b/polybar/config.ini
@@ -61,7 +61,7 @@ font-5 = FontAwesome6Brands:style=Regular:size=12;2
 modules-left = i3 xwindow
 #modules-left = xworkspaces 
 #modules-center = xwindow
-modules-right = filesystem backlight-acpi pulseaudio memory battery cpu wlan powermenu
+modules-right = filesystem backlight-acpi pulseaudio memory battery cpu wlan date powermenu
 
 cursor-click = pointer
 cursor-scroll = ns-resize
