--- a/polybar/config.ini
+++ b/polybar/config.ini
@@ -68,7 +68,7 @@ cursor-scroll = ns-resize
 
 enable-ipc = true
 
-; tray-position = right
+tray-position = right
 
 ; wm-restack = generic
 ; wm-restack = bspwm
@@ -308,7 +308,7 @@ expand-right = false
 
 format-spacing = 1
 
-label-open = 
+label-open = 
 label-open-foreground = ${colors.secondary}
 label-close = 
 label-close-foreground = ${colors.secondary}
